# CurlTest

./: CMakeLists.txt
Common/: CMakeLists.txt
Common/argparse/: argparse.hpp
Common/swaechter/: Observable.hpp
Controller/: CMakeLists.txt
Controller/fdownload/: Controller.hpp
FileDownloader/: CMakeLists.txt  FileDownloader.cpp
FileDownloaderCmdline/: CMakeLists.txt  FileDownloaderCmdline.cpp
Model/: CMakeLists.txt
Model/fdownload/: Downloader.cpp  Downloader.hpp
View/: CMakeLists.txt
View/fdownload/: MainWindow.cpp  MainWindow.hpp
